# gorust-prototype

./: LICENSE  README.md
client/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dependencies  Dockerfile.tools  index.html
client/assets/models/: my_favorite_scene.rgs  nocamera.rgs  withcamera.rgs
client/src/: lib.rs
client/src/game_bits/: js_channel.rs  mod.rs  websocket.rs
client/src/js/: fullscreen.js  game_mod.js  js_channel.js  log.js
server/: go.mod
server/src/: main.go
server/src/hub/: hub.go
