[package]
name = "client"
version = "0.1.0"
authors = ["Geoff Stilwell <gstilwell@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
#rg3d = "0.19.0"
#rg3d = { path = "rg3d" }
rg3d = { git = "https://github.com/rg3dengine/rg3d", rev = "7a044a3fb429b8c56052399671e8dcfde6498efd" }
#getrandom = { version = "0.2", features = ["js"] }