[package]
name = "client"
version = "0.1.0"
authors = ["Geoff Stilwell <gstilwell@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
rg3d = { git = "https://github.com/rg3dengine/rg3d", rev = "7a044a3fb429b8c56052399671e8dcfde6498efd" }