[package]
name = "client"
version = "0.1.0"
authors = ["Geoff Stilwell <gstilwell@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.6"
rg3d = { git = "https://github.com/rg3dengine/rg3d", rev = "7a044a3fb429b8c56052399671e8dcfde6498efd" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.22"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]